G/tests/fail/array_assign.g
// Gán cả mảng tĩnh bằng '='.
fn main() -> int {
    let mut a: [3]int = [1, 2, 3]
    let b: [3]int = [4, 5, 6]
    a = b
    return 0
}
